yamls/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rick-morty
  namespace: rickmorty
 # name of the resource
  labels:
    app: rick-morty
spec:
  replicas: 1
  # adjust replica set
  selector:
    matchLabels:
      app: rick-morty
  template:
    metadata:
      labels:
        app: rick-morty
    spec:
      containers:
      - name: rickandmorty-container
        image: ecyanofsky/rick_and_morty:1.0
        ports:
        - containerPort: 5000
